added Js to search for cities with an event listener button and adding the cityies to local storage and retrieve them

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
             <div>
                 <h3>Search for a City</h3>
-                <form id="user-form">
-                    <input type="text" id="myInput" placeholder="City Name..." />
-                    <button class="btn" id="searchBtn">Search</button>
+                <form id="city-form">
+                    <input type="text" id="city-input" placeholder="City Name..." />
+                    <button class="btn" id="search-btn">Search</button>
                 </form>
                 <div></div>
             </div>
 
-            <div>
+            <div class="search-history list-group">
                 <h3>Search History</h3>
             </div>
             <div></div>
@@ -38,12 +38,12 @@
 
         <div>
             <div>
-                <h2>Current Weather</h2>
+                <h2 class="current-weather">Current Weather</h2>
             </div>
             <div></div>
 
             <div>
-                <h2>5 Day Forecast</h2>
+                <h2 class="daily-forecast">5 Day Forecast</h2>
             </div>
             <div></div>
         </div>
