--- a/index.html
+++ b/index.html
@@ -11,39 +11,36 @@
     <title>Five Day Weather Forecast</title>
 </head>
 
-<body>
-    <header>
+<body class="flex-colomn min-100-vh">
+    <header class="hero">
         <h1>
             Weather Dashboard
         </h1>
     </header>
 
-    <main>
-        <div>
+    <main class="flex-row justify-space-between">
+        <div class="col-12 col-sm-12 col-md-4 float-left">
 
-            <div>
-                <h3>Search for a City</h3>
-                <form id="city-form">
+            <div class="card">
+                <h3 class="card-header">Search for a City</h3>
+                <form class="card-body" id="city-form">
                     <input type="text" id="city-input" placeholder="City Name..." />
                     <button class="btn" id="search-btn">Search</button>
                 </form>
-                <div></div>
             </div>
 
-            <div class="search-history list-group">
-                <h3>Search History</h3>
+            <div class="card search-history">
+                <h3 class="card-header">Search History</h3>
             </div>
-            <div></div>
         </div>
 
-        <div>
+        <div  class="col-12 col-sm-12 col-md-8 float-right">
             <div>
-                <h2 class="current-weather">Current Weather</h2>
+                <h2 class="subtitle current-weather">Current Weather</h2>
             </div>
-            <div></div>
 
             <div>
-                <h2 class="daily-forecast">5 Day Forecast</h2>
+                <h2 class="subtitle daily-forecast">5 Day Forecast</h2>
             </div>
             <div></div>
         </div>
