more HTML classes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>Five Day Weather Forecast</title>
 </head>
 
-<body class="flex-colomn min-100-vh">
+<body class="flex-column min-100-vh">
     <header class="hero">
         <h1>
             Weather Dashboard
         </h1>
     </header>
 
-    <main class="flex-row justify-space-between">
+    <main class="row justify-content-center">
         <div class="col-12 col-sm-12 col-md-4 float-left">
 
             <div class="card">
@@ -34,15 +34,14 @@
             </div>
         </div>
 
-        <div  class="col-12 col-sm-12 col-md-8 float-right">
+        <div class="col-12 col-sm-12 col-md-8 float-right">
             <div>
-                <h2 class="subtitle current-weather">Current Weather</h2>
+                <h2 class="card-header subtitle current-weather">Current Weather</h2>
             </div>
-
-            <div>
-                <h2 class="subtitle daily-forecast">5 Day Forecast</h2>
+            <div class="card-body"></div>
+                <h2 class="card-header subtitle daily-forecast">5 Day Forecast</h2>
             </div>
-            <div></div>
+            <div class="card-body"></div>
         </div>
 
 
