--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h3 class="card-header">Search for a City</h3>
                 <form class="card-body" id="city-form">
                     <input type="text" id="city-input" placeholder="City Name..." />
-                    <button class="btn" id="search-btn">Search</button>
+                    <button class="btn btn-primary" id="search-btn">Search</button>
                 </form>
             </div>
 
