added function to display data in five day forecast

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="card-body"></div>
                 <h2 class="card-header subtitle daily-forecast">5 Day Forecast</h2>
             </div>
-            <div class="card-body"></div>
+            <div class="card-body five-day"></div>
         </div>
 
 
@@ -52,6 +52,7 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.6"></script>
     <script src="./assets/script.js"></script>
 </body>
 
