added function for displaying current weather

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <div class="col-12 col-sm-12 col-md-8 float-right">
             <div>
-                <h2 class="card-header subtitle current-weather">Current Weather</h2>
+                <h2 class="card-header subtitle today">Current Weather</h2>
             </div>
-            <div class="card-body"></div>
+            <div class="card-body current-weather"></div>
                 <h2 class="card-header subtitle daily-forecast">5 Day Forecast</h2>
             </div>
             <div class="card-body five-day"></div>
