added a button for each city in the search history

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </form>
             </div>
 
-            <div class="card search-history">
+            <div class="card search-history ">
                 <h3 class="card-header">Search History</h3>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <h2 class="card-header subtitle today">Current Weather</h2>
             </div>
             <div class="card-body current-weather"></div>
-                <h2 class="card-header subtitle daily-forecast">5 Day Forecast</h2>
+                <h2 class="card-header daily-forecast">5 Day Forecast</h2>
             </div>
             <div class="card-body five-day"></div>
         </div>
