--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="col-12 col-sm-12 col-md-8 float-right">
             <div>
-                <h2 class="card-header subtitle today">Current Weather</h2>
+                <h2 class="card-header today">Current Weather</h2>
             </div>
             <div class="card-body current-weather"></div>
                 <h2 class="card-header daily-forecast">5 Day Forecast</h2>
